compiler/src/test/resources/golden/errors/trait_sig_mismatch.dawn
trait Ord2[T] {
  fn cmp2(a: T, b: T) -> Int
}

type Point = { x: Int, y: Int }

impl Ord2[Point] {
  fn cmp2(a: Point, b: Float) -> Int = a.x
}

pub fn main() -> Unit !io = println("x")
