compiler/src/test/resources/golden/errors/trait_sig_mismatch.err
error: `cmp2` does not match the trait's signature
  --> trait_sig_mismatch.dawn:8:6
  |
8 |   fn cmp2(a: Point, b: Float) -> Int = a.x
  |      ^^^^
  = hint: trait `Ord2` declares it as fn cmp2(Point, Point) -> Int
